--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,5 +129,6 @@
     <string name="bookmarkSave">Save</string>
     <string name="bookmarkTitleEdit">Edit Bookmark</string>
     <string name="bookmarkTitleSave">Save Bookmark</string>
+    <string name="noBookmarks">No bookmarks added yet</string>
 
 </resources>
