Fix padding issue on widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,7 @@
     <string name="bookmarkDeleteConfirmTitle">Confirm</string>
     <string name="bookmarkAddedFeedback">Bookmark added</string>
 
+    <!-- Widget -->
+    <string name="searchWidgetTextHint">Search DuckDuckGo</string>
+
 </resources>
