--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="addBookmarkMenuTitle">Add Bookmark</string>
     <string name="downloadImage">Download Image</string>
     <string name="imageOptions">Image Options</string>
+    <string name="permissionRequiredToDownload">Downloading requires storage permission</string>
 
     <!-- AutoComplete Suggestions -->
     <string name="editQueryBeforeSubmitting">Edit query before searching</string>
