--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,8 +104,11 @@
     <!-- Settings Activity -->
     <string name="settingsActivityTitle">Settings</string>
     <string name="settingsMenuItemTitle">Settings</string>
+    <string name="settingsHeadingGeneral">General</string>
+    <string name="settingsHeadingOther">Other</string>
+    <string name="settingsOnboarding">Privacy Features</string>
+    <string name="settingsAboutDuckduckgo">About DuckDuckGo</string>
     <string name="settingsVersion">Version</string>
-    <string name="aboutDuckduckgo">About DuckDuckGo</string>
     <string name="leaveFeedback">Leave Feedback</string>
     <string name="feedbackEmailAddress">android@duckduckgo.com</string>
     <string name="feedbackSubject">DuckDuckGo Android Feedback</string>
