--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,13 @@
     <string name="permissionRequiredToDownload">Downloading requires storage permission</string>
     <string name="find_in_page">Find in page</string>
 
+    <!-- Find in page -->
+    <string name="nextSearchTermDescription">Find next</string>
+    <string name="previousSearchTermDescription">Find previous</string>
+    <string name="closeFindInPageButtonDescription">Close find in page view</string>
+    <string name="findInPageHint">Find in page</string>
+    <string name="findInPageMatches">%d/%d</string>
+
     <!-- AutoComplete Suggestions -->
     <string name="editQueryBeforeSubmitting">Edit query before searching</string>
     <string name="settings_autocomplete_enabled">Autcomplete Suggestions</string>
@@ -142,9 +149,5 @@
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Search DuckDuckGo</string>
-    <string name="nextSearchTermDescription">Find next</string>
-    <string name="previousSearchTermDescription">Find previous</string>
-    <string name="closeFindInPageButtonDescription">Close find in page view</string>
-    <string name="findInPageHint">Find in page</string>
 
 </resources>
