Change string to "Desktop Site" instead of "Request Desktop Site"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="downloadImage">Download Image</string>
     <string name="imageOptions">Image Options</string>
     <string name="permissionRequiredToDownload">Downloading requires storage permission</string>
-    <string name="requestDesktopSiteMenuTitle">Request Desktop Site</string>
+    <string name="requestDesktopSiteMenuTitle">Desktop Site</string>
 
     <!-- Find in page -->
     <string name="find_in_page">Find in page</string>
