Feature/request desktop site (#198)
* First pass at "request desktop site" mode.

Includes removal of user device details - the make and model are omitted, though other details about the browser capabilities are retained to ensure a good browsing experience

* Tidy up request desktop site feature

* Fix last few failing tests after refactor

* Change string to "Desktop Site" instead of "Request Desktop Site"

* Make "userAgent" package lowercase

* Fix checkbox UI - tweaking paddings and margins

* Instantiate UserAgentProvider with default user agent string

* Move url checking around desktop/mobile site to UriExtension.kt

* Remove unused function

* Add better support for responsive websites when toggling desktop mode

* Tweak initial scale value up to 120

* Remove use of `setInitialScale` which seems to do more damage than good

The result of this is that some responsive sites do not present differently under desktop or mobile modes. theguardian.com/uk is one such example site where we render both modes identically (despite Chrome rendering them correctly for each)

Some other responsive sites do work just fine though - arstechnica.com for example renders differently for us under desktop and mobile modes.

Will revisit fixing sites like theguardian.com/uk in another task.

* Return `loadWithOverviewMode` and `useWideViewPort` to always be true

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,9 +27,10 @@
     <string name="downloadImage">Download Image</string>
     <string name="imageOptions">Image Options</string>
     <string name="permissionRequiredToDownload">Downloading requires storage permission</string>
-    <string name="find_in_page">Find in page</string>
+    <string name="requestDesktopSiteMenuTitle">Desktop Site</string>
 
     <!-- Find in page -->
+    <string name="find_in_page">Find in page</string>
     <string name="nextSearchTermDescription">Find next</string>
     <string name="previousSearchTermDescription">Find previous</string>
     <string name="closeFindInPageButtonDescription">Close find in page view</string>
