Feature/share url (#212)
* Implement URL sharing from current page

* Add support for long pressing link to share

* Better null handling around the shared url

* Better grouping on strings file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,11 @@
     <string name="permissionRequiredToDownload">Downloading requires storage permission</string>
     <string name="requestDesktopSiteMenuTitle">Desktop Site</string>
 
+    <!-- Sharing options -->
+    <string name="linkOptions">Link Options</string>
+    <string name="shareLink">Share Link</string>
+    <string name="shareMenuTitle">Share…</string>
+
     <!-- Find in page -->
     <string name="find_in_page">Find in page</string>
     <string name="nextSearchTermDescription">Find next</string>
