--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,15 @@
     <string name="onboardingDefaultBrowserDescription">Make DuckDuckGo your default browser in Settings.</string>
     <string name="onboardingDefaultBrowserGoToSettingsAction">Go to Settings</string>
     <string name="onboardingContinue">Continue</string>
+
+    <!-- Default Browser -->
     <string name="cannotLaunchDefaultAppSettings">Can\'t launch default app settings screen</string>
+    <string name="defaultBrowserInfoTitle">Make Us Your Default Browser</string>
+    <string name="defaultBrowserInfoMessage">Make Duckduckgo the default browser in your Device Settings for full-time tracking protection.</string>
+    <string name="dismissDefaultBrowserInfo">Dismiss default browser info</string>
+    <string name="notificationBannerDefaultBrowserTitle">Make DuckDuckGo Your Default Browser</string>
+    <string name="notificationBannerDefaultBrowserMessage">For full-time tracking protection, make us your default</string>
+    <string name="notificationDefaultBrowserDismissButton">Dismiss notification banner</string>
 
     <!-- Browser Activity -->
     <string name="browserPopupMenu">Browser menu</string>
@@ -52,7 +60,6 @@
     <!-- AutoComplete Suggestions -->
     <string name="editQueryBeforeSubmitting">Edit query before searching</string>
     <string name="settingsAutocompleteEnabled">Autocomplete Suggestions</string>
-    <string name="settingsDefaultBrowserEnabled">Set as Default Browser</string>
 
     <!-- Tabs -->
     <string name="homeTab">DuckDuckGo</string>
@@ -176,10 +183,5 @@
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Search DuckDuckGo</string>
-    <string name="notificationBannerDefaultBrowserTitle">Make DuckDuckGo Your Default Browser</string>
-    <string name="notificationBannerDefaultBrowserMessage">For full-time tracking protection, make us your default</string>
-    <string name="notificationDefaultBrowserDismissButton">Dismiss notification banner</string>
-    <string name="defaultBrowserInfoTitle">Make Us Your Default Browser</string>
-    <string name="defaultBrowserInfoMessage">Make Duckduckgo the default browser in your Device Settings for full-time tracking protection.</string>
 
 </resources>
