Add feedback activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,6 +163,18 @@
     <string name="aboutMoreLink">More at duckduckgo.com/about</string>
     <string name="no_suggestions">No Suggestions</string>
 
+    <!-- Feedback Activity -->
+    <string name="feedbackActivityTitle">Feedback</string>
+    <string name="feedbackMenuItemTitle">Leave feedback</string>
+    <string name="feedbackHeading">Share your Feedback</string>
+    <string name="feedbackModalDescription">Anonymously share your feedback to help us improve the DuckDuckGo Privacy Browser</string>
+    <string name="feedbackReportBrokenSite">Report a broken site</string>
+    <string name="feedbackDomainAdded">Domain Added to Feedback Report</string>
+    <string name="feedbackUrlHint">Enter url</string>
+    <string name="feedbackMessageHint">How can the app be improved? What do you love? What\'s breaking? Please be as specific as possible.</string>
+    <string name="feedbackSubmitButton">Submit Feedback</string>
+    <string name="feedbackIsAnonymousLink">Your feedback is completely anonymous</string>
+
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Bookmarks</string>
     <string name="bookmarksActivityTitle">Bookmarks</string>
@@ -181,5 +193,6 @@
 
     <!-- Widget -->
     <string name="searchWidgetTextHint">Search DuckDuckGo</string>
+
 
 </resources>
