--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,9 @@
     <string name="findInPageHint">Find in page</string>
     <string name="findInPageMatches">%d/%d</string>
 
+    <!-- Add to home -->
+    <string name="addToHome">Add to Home</string>
+
     <!-- AutoComplete Suggestions -->
     <string name="editQueryBeforeSubmitting">Edit query before searching</string>
     <string name="settingsAutocompleteEnabled">Autocomplete Suggestions</string>
