--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,7 @@
     <string name="feedbackMessageHint">How can the app be improved? What do you love? What\'s breaking? Please be as specific as possible.</string>
     <string name="feedbackSubmitButton">Submit Feedback</string>
     <string name="feedbackIsAnonymousLink">Your feedback is completely anonymous</string>
+    <string name="feedbackSubmitted">Thank you! Feedback submitted</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Bookmarks</string>
