Add menu option for add to home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,4 +195,7 @@
     <!-- Widget -->
     <string name="searchWidgetTextHint">Search DuckDuckGo</string>
 
+    <!-- Home Screen Shortcuts -->
+    <string name="addToHome">Add to Home</string>
+
 </resources>
