Add custom url scheme handling
We also show a dialog of some sorts before launching the external app so that the user can cancel if they didn't mean to launch that external app.

If there is only one app that can be launched for that link, we show an yes/no AlertDialog. Otherwise, we let the system Activity picker kick in. Either way, the user could cancel if they wanted to.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,11 @@
     <string name="editQueryBeforeSubmitting">Edit query before searching</string>
     <string name="settingsAutocompleteEnabled">Autocomplete Suggestions</string>
 
+    <!-- Opening external apps -->
+    <string name="openExternalApp">Open External App</string>
+    <string name="launchingExternalApp">Opening external app</string>
+    <string name="confirmOpenExternalApp">Are you sure you want to open this link inside another app?</string>
+
     <!-- Tabs -->
     <string name="homeTab">DuckDuckGo</string>
     <string name="tabActivityTitle">Tabs</string>
