Potential interim solution for clearing process on 🔥 button press

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,4 +208,8 @@
     <!-- Home Screen Shortcuts -->
     <string name="addToHome">Add to Home</string>
 
+    <string name="title_activity_fire">FireActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
 </resources>
