--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="tapFireDirective">Tap </string>
     <string name="tapFireIconDescription">fire</string>
     <string name="tapFireExplanation"> to forget everything</string>
+    <string name="closeAllTabsMenuItem">Close All Tabs</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Privacy Dashboard</string>
