--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="settingsMenuItemTitle">Settings</string>
     <string name="settingsHeadingGeneral">General</string>
     <string name="settingsHeadingOther">Other</string>
+    <string name="settingsLightTheme">Light Theme</string>
     <string name="settingsOnboarding">Privacy Features</string>
     <string name="settingsAboutDuckduckgo">About DuckDuckGo</string>
     <string name="settingsVersion">Version</string>
