--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="options">Options</string>
     <string name="shareLink">Share Link</string>
     <string name="shareMenuTitle">Share…</string>
-    <string name="copyUrl">Copy link address</string>
+    <string name="copyUrl">Copy Link Address</string>
 
     <!-- Find in page -->
     <string name="findInPageMenuTitle">Find in Page</string>
