--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release we've added optimizations to our HTTPS upgrading solution.
+This release includes a light widget, faster fire data clearing, an improved long press menu and a number of tweaks and bugfixes.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
