Update release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-This release includes a light widget, faster fire data clearing, an improved long press menu and a number of tweaks and bugfixes.
+In this release we updated our privacy grade algorithm, optimized battery usage and hardened the app against address bar spoofing.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
